k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: findle
  labels:
    app.kubernetes.io/part-of: findle
